--- a/src/Body/Middle/Middle.css
+++ b/src/Body/Middle/Middle.css
@@ -182,6 +182,10 @@ img + img {
 }
 
 @media only screen and (max-width: 414px) {
+	.middle {
+		width: 414px;
+	}
+
 	.advertise_left,
 	.advertise_right {
 		display: none;
@@ -228,14 +232,20 @@ img + img {
 
 	.div-carousel-1 {
 		position: absolute;
-		width: 400px;
+		width: 396px;
 		left: 16px;
 		top: 390px;
 	}
 
 	.carousel-1 {
 		height: 150px;
-		width: 400px;
+		width: 396px;
+	}
+
+	.div-carousel-2 {
+		position: absolute;
+		width: 396px !important;
+		height: 150px;
 	}
 
 	#first {
