--- a/src/Body/Body.css
+++ b/src/Body/Body.css
@@ -5,9 +5,9 @@
 		rgba(174, 201, 219, 0) -75.26%,
 		#1c557a 34.05%
 	);
-	width: 1920px;
+	width: 100%;
 	height: 3000px;
-	top: 96px;
+	top: 10%;
 }
 
 @media only screen and (max-width: 414px) {
