--- a/src/Body/Middle/Middle.css
+++ b/src/Body/Middle/Middle.css
@@ -1,39 +1,41 @@
 .khuyenMai {
 	position: absolute;
-	top: 758px;
-	left: 424px;
+	top: 26%;
+	left: 22%;
 }
 
 .khuyenMai > img {
-	width: 340px;
-	height: 203px;
+	width: 22%;
+	height: 15%;
 }
 
 img + img {
-	margin-left: 16px;
+	margin-left: 2%;
 }
 
 .advertise_left {
-	position: absolute;
-	top: 680px;
-	width: 345px;
-	height: 800px;
+	position: fixed;
+	top: 12%;
+	width: 18%;
+	height: auto;
+	z-index: 2;
 }
 
 .advertise_right {
-	position: absolute;
-	top: 640px;
-	left: 1560px;
-	width: 345px;
-	height: 800px;
+	position: fixed;
+	top: 9%;
+	left: 80%;
+	width: 18%;
+	height: auto;
+	z-index: 2;
 }
 
 .btn_khuyenmai {
 	position: absolute;
-	width: 254px;
-	height: 40px;
-	left: 424px;
-	top: 1000px;
+	width: 13%;
+	height: 1.5%;
+	left: 22%;
+	top: 33%;
 
 	background: #ffffff;
 	border: 1px solid #0068ab;
@@ -43,10 +45,10 @@ img + img {
 
 .btn_khuyenmai > .text {
 	font-weight: 700;
-	font-size: 18px;
+	font-size: 1.8vh;
 	color: #0068ab;
-	margin-left: 80px;
-	margin-top: 8px;
+	margin-left: 30%;
+	margin-top: 4%;
 }
 
 .btn_khuyenmai:hover {
@@ -58,33 +60,33 @@ img + img {
 }
 
 .indicator_2 {
-	margin-left: 8px !important;
+	margin-left: 0.4vw !important;
 	content: url("../../assets/icon_website/small_indicator_2.svg") !important;
 	border-radius: 0% !important;
 }
 
 .div-carousel-1 {
 	position: absolute;
-	width: 1200px;
-	left: 362px;
-	top: 1060px;
+	width: 63%;
+	left: 19%;
+	top: 35%;
 }
 
 .carousel-1 {
-	height: 260px;
+	height: 20vh;
 }
 
 #first {
-	margin-left: 60px;
+	margin-left: 5%;
 }
 
 .item-img {
-	width: 254px;
-	height: 118px;
+	width: 13.3vw;
+	height: 12vh;
 }
 
 .item-km {
-	margin-left: 20px;
+	margin-left: 2%;
 }
 
 .item-list {
@@ -93,64 +95,64 @@ img + img {
 
 .contain-price {
 	position: absolute;
-	width: 254px;
-	height: 32px;
+	width: 13.3vw;
+	height: 3.3vh;
 	background: #438bb9;
-	top: 118px;
 }
 
 .discount-price {
 	position: absolute;
-	width: 108px;
-	height: 28px;
-	top: 2px;
-	left: 140px;
+	width: 45%;
+	height: 100%;
+	top: 2%;
+	left: 55%;
 
 	background: #525252;
 }
 
 .discount-1 {
-	width: 40px;
-	height: 28px;
+	width: 100%;
+	height: 3.1vh;
 	background-color: #ffffff;
 	margin: 0px;
 	color: #1bdd5d;
 	font-weight: 500;
-	font-size: 16px;
+	font-size: 1.7vh;
+	padding-top: 2%;
 }
 
 .right-price {
 	position: absolute;
-	left: 50px;
+	left: 46%;
 }
 
 .right-price > p {
 	margin: 0px;
-	margin-left: 12px;
-	font-size: 10px;
+	margin-left: 15%;
+	font-size: 1vh;
 	text-decoration-line: line-through;
 	color: #c2c2c2;
+	width: 120%;
 }
 
 .right-price > h4 {
 	margin: 0px;
-	margin-left: 4px;
-	font-size: 12px;
+	font-size: 1.4vh;
 	color: #c3e8ff;
 	font-weight: 500;
 }
 
 .left-price {
 	position: absolute;
-	width: 40px;
+	width: 34%;
 }
 
 .btn_muanhieu {
 	position: absolute;
-	width: 254px;
-	height: 40px;
-	left: 424px;
-	top: 1350px;
+	width: 13%;
+	height: 1.6%;
+	left: 22%;
+	top: 43%;
 
 	background: #ffffff;
 	border: 1px solid #0068ab;
@@ -160,10 +162,10 @@ img + img {
 
 .btn_muanhieu > .text {
 	font-weight: 700;
-	font-size: 18px;
+	font-size: 1.8vh;
 	color: #0068ab;
-	margin-left: 32px;
-	margin-top: 6px;
+	margin-left: 13%;
+	margin-top: 3%;
 }
 
 .btn_muanhieu:hover {
@@ -176,9 +178,18 @@ img + img {
 
 .div-carousel-2 {
 	position: absolute;
-	width: 1200px;
-	left: 362px;
-	top: 1420px;
+	width: 63%;
+	left: 19%;
+	top: 45%;
+}
+
+.btn_wrapper {
+	display: flex;
+}
+
+.next_icon,
+.prev_icon {
+	margin-bottom: 400%;
 }
 
 @media only screen and (max-width: 414px) {
@@ -346,5 +357,10 @@ img + img {
 		width: 400px;
 		left: 16px;
 		top: 568px;
+	}
+
+	.next_icon,
+	.prev_icon {
+		margin-bottom: 140px;
 	}
 }
