--- a/src/Body/Navbar/Navbar.css
+++ b/src/Body/Navbar/Navbar.css
@@ -1,71 +1,80 @@
 .nav {
 	position: absolute;
-	left: 424px;
-	width: 1040px;
-	top: 33px;
+	left: 22%;
+	width: 55%;
+	top: 1%;
 	display: flex;
 }
 
-.dropdown,
 .intro,
 .support,
 .setting,
 .cart {
 	background-color: white;
-	width: 180px;
-	height: 26px;
-	margin-left: 28px;
+	width: 13%;
+	height: 8%;
+	margin-left: 2%;
 	border-radius: 24px;
 	font-weight: 700;
 	color: #0068ab;
-}
-
-.dropdown {
-	padding: 4px 16px 2px 16px;
-	margin-left: 0px;
-}
-
-.intro {
-	padding: 4px 20px 2px 40px;
-}
-
-.support {
-	padding: 4px 8px 2px 52px;
-}
-
-.setting {
-	padding: 4px 8px 2px 36px;
+	padding-top: 1%;
+	padding-left: 4%;
+	padding-bottom: 0.6%;
 }
 
 .cart {
-	padding: 4px 8px 2px 36px;
+	padding-bottom: 1%;
+}
+
+.dropdown {
+	background-color: white;
+	margin-left: 6%;
+	border-radius: 24px;
+	font-weight: 700;
+	color: #0068ab;
+	padding-top: 4%;
+	padding-bottom: 3%;
+	padding-left: 8%;
+}
+
+.menu {
+	width: 23%;
 }
 
 .dropdown > .logo {
-	width: 18px;
-	height: 18px;
-	padding-top: 2px;
+	width: 9%;
+	height: 9%;
+	padding-top: 1%;
 }
 
 .logo {
-	width: 26px;
-	height: 26px;
+	width: 18%;
+	height: 8%;
 	margin-right: 8px;
 	display: inline-block;
 	margin-top: 0px;
 }
 
+#logo-gt {
+	width: 9%;
+}
+
 .text {
 	position: absolute;
-	height: 17px;
-	padding-bottom: 10px;
+	height: 13%;
 	display: inline-block;
 	margin-top: 0px;
-	font-size: 16px;
+	font-size: 1.8vh;
+}
+
+.item_menu > .logo {
+	width: 15%;
+	height: 60%;
 }
 
 .dropdown_menu {
 	display: none;
+	margin-left: 5.7%;
 }
 
 .dropdown:hover,
@@ -111,21 +120,23 @@
 .menu {
 	display: inline-block;
 	position: relative;
-	z-index: 5;
+	z-index: 3;
 }
 
 .item_menu {
 	background-color: #0068ab;
-	width: 180px;
-	height: 26px;
+	width: 85.7%;
+	height: 6%;
 	font-weight: 500;
 	color: #ffffff;
-	padding: 4px 16px 8px 16px;
+	padding-left: 6%;
+	padding-top: 4%;
+	padding-right: 8%;
+	padding-bottom: 2%;
 }
 
 .item_menu:last-child {
 	border-radius: 0px 0px 24px 24px;
-	padding-bottom: 16px;
 }
 
 .menu:hover > .dropdown_menu {
