--- a/src/Body/Question/Question.css
+++ b/src/Body/Question/Question.css
@@ -1,22 +1,22 @@
 .question {
 	position: absolute;
-	top: 2300px;
+	top: 78%;
 	text-align: center;
-	width: 1920px;
+	width: 100%;
 	color: #ffffff;
 	background-color: #000000;
-	height: 400px;
+	height: 11%;
 }
 
 .question-title {
 	font-weight: bold;
-	font-size: 24px;
-	margin-top: 80px;
+	font-size: 3vh;
+	margin-top: 4%;
 }
 
 .question-des {
 	font-weight: normal;
-	font-size: 14px;
+	font-size: 1.6vh;
 }
 
 .question-dn {
@@ -26,15 +26,15 @@
 .question-dk {
 	background: #0068ab;
 	border-radius: 10px;
-	width: 140px;
-	height: 40px;
+	width: 8%;
+	height: 8%;
 	text-align: center;
-	margin-left: 890px;
+	margin-left: 46%;
 	margin-top: 2%;
 	margin-bottom: 2%;
-	padding-top: 8px;
-	padding-bottom: 16px;
-	height: 16px;
+	padding-top: 0.5%;
+	padding-bottom: 0.8%;
+	height: 5%;
 	cursor: pointer;
 }
 
