--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -1,33 +1,35 @@
 .header {
 	background-color: #0068ab;
-	position: absolute;
-	width: 1920px;
-	height: 96px;
+	position: fixed;
+	width: 100%;
+	height: 11%;
 	display: flex;
 	align-items: center;
+	z-index: 5;
 }
 
 .logo_title {
 	position: absolute;
-	width: 227px;
-	height: 64px;
-	left: 424px;
+	width: 50%;
+	height: 50%;
+	left: 2%;
 }
 
 .search {
 	position: absolute;
 	border-radius: 50px;
-	height: 40px;
-	width: 500px;
-	left: 666px;
-	padding-left: 12px;
-	font-size: 18px;
+	height: 45%;
+	width: 27%;
+	left: 35%;
+	padding-left: 1%;
+	font-size: 2vh;
+	border: 0px;
 }
 
 .search_icon {
 	position: absolute;
-	width: 40px;
-	left: 1140px;
+	width: 2%;
+	left: 61%;
 	border-radius: 24px;
 	background-color: #0068ab;
 	cursor: pointer;
@@ -35,13 +37,13 @@
 
 .login {
 	position: absolute;
-	left: 1300px;
+	left: 68%;
 	background-color: white;
-	width: 144px;
-	height: 34px;
+	width: 8%;
+	height: 30%;
 	border-radius: 24px;
-	padding: 8px;
-	padding-left: 16px;
+	padding: 0.4%;
+	padding-left: 0.7%;
 	padding-right: 0px;
 	padding-bottom: 0px;
 	cursor: pointer;
@@ -49,13 +51,13 @@
 
 .login_icon {
 	position: absolute;
-	width: 28px;
+	width: 18%;
 }
 
 .login > span {
 	position: absolute;
-	left: 56px;
-	font-size: 18px;
+	left: 33%;
+	font-size: 2vh;
 	position: absolute;
 	color: #0068ab;
 }
