--- a/src/List/Item/Item.css
+++ b/src/List/Item/Item.css
@@ -1,26 +1,26 @@
 .imageCover {
 	position: absolute;
-	width: 200px;
-	height: 75px;
+	width: 41%;
+	height: 14%;
 }
 .details {
 	position: absolute;
-	left: 202px;
-	width: 600px;
+	left: 41%;
+	width: 119%;
 	background-color: #2c4a5c;
-	height: 75px;
+	height: 14%;
 	display: flex;
 }
 
 .details-left {
-	width: 400px;
+	width: 66%;
 	margin: 0px;
 }
 
 .title {
 	margin: 0px;
-	margin-top: 4px;
-	font-size: 18px;
+	margin-top: 1%;
+	font-size: 1.8vh;
 	color: white;
 	padding-left: 1%;
 }
@@ -30,14 +30,14 @@
 	padding-left: 1%;
 	padding-top: 2%;
 	color: #e2e2e2;
-	font-size: 14px;
+	font-size: 1.4vh;
 	font-weight: 300;
 }
 
 .item-price {
 	position: absolute;
-	top: 28px;
-	left: 474px;
+	top: 38%;
+	left: 80%;
 	background-color: transparent;
 }
 
@@ -46,25 +46,25 @@
 	text-align: center;
 	color: #ffffff;
 	font-weight: 400;
-	font-size: 14px;
-	margin-left: 24px;
+	font-size: 1.5vh;
+	margin-left: 45%;
 }
 
 .hover-item {
 	position: absolute;
-	left: 802px;
-	width: 248px;
+	left: 160%;
+	width: 50%;
 	bottom: 0px;
 	top: 0px;
-	height: 540px;
+	height: 101%;
 	max-width: 300px;
 	background-color: #c0dbec;
 }
 
 .hover-title {
 	margin: 0px;
-	margin-top: 4px;
-	font-size: 18px;
+	margin-top: 1%;
+	font-size: 1.8vh;
 	color: #0068ab;
 	padding-left: 2%;
 }
@@ -75,7 +75,7 @@
 	margin-left: 2%;
 	background-color: #236b99;
 	border-radius: 3px;
-	height: 24px;
+	height: 4%;
 	color: #ffffff;
 	margin-bottom: 4%;
 	display: inline-block;
@@ -111,13 +111,13 @@
 }
 
 .hover-img {
-	width: 240px;
+	width: 97%;
 	margin-left: 1%;
 }
 
 .item-item {
-	width: 500px;
-	height: 88px;
+	width: 53vh;
+	height: 10vh;
 }
 
 @media only screen and (max-width: 414px) {
