--- a/src/List/List.css
+++ b/src/List/List.css
@@ -1,14 +1,14 @@
 .list {
 	position: absolute;
-	top: 1740px;
-	left: 424px;
+	top: 55%;
+	left: 22%;
 }
 
 .list_button {
 	position: absolute;
-	top: 1700px;
-	left: 424px;
-	width: 600px;
+	top: 54%;
+	left: 22%;
+	width: 40%;
 }
 
 .item_item {
@@ -18,10 +18,10 @@
 .list_button > button {
 	background: transparent;
 	border-radius: 10px 10px 0px 0px;
-	height: 40px;
+	height: 100%;
 	margin-left: 1%;
 	border: none;
-	font-size: 18px;
+	font-size: 2.4vh;
 	color: #ffffff;
 	cursor: pointer;
 }
