--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -95,13 +95,14 @@
 		height: 22px;
 		left: 152px;
 		top: 38px;
+		font-size: 13px;
 	}
 
 	.search_icon {
-		left: 358px;
-		height: 14px;
-		width: 14px;
-		top: 50px;
+		left: 343px;
+		height: 20px;
+		width: 20px;
+		top: 40px;
 	}
 
 	.login_dn {
