--- a/src/Body/Question/Question.css
+++ b/src/Body/Question/Question.css
@@ -10,13 +10,13 @@
 
 .question-title {
 	font-weight: bold;
-	font-size: 3vh;
+	font-size: 1.5vw;
 	margin-top: 4%;
 }
 
 .question-des {
 	font-weight: normal;
-	font-size: 1.6vh;
+	font-size: 0.8vw;
 }
 
 .question-dn {
