--- a/src/Footer/Footer.css
+++ b/src/Footer/Footer.css
@@ -22,7 +22,9 @@
 	float: right;
 	width: 78%;
 	margin-top: 2%;
+	margin-left: 1%;
 	color: #ffffff;
+	font-size: 0.8vw;
 }
 
 .icon-footer {
@@ -34,7 +36,7 @@
 	color: #ffffff;
 	padding-top: 5%;
 	margin-left: 5%;
-	font-size: 1.4vh;
+	font-size: 0.7vw;
 }
 
 .facebook,
