--- a/src/List/Item/Item.css
+++ b/src/List/Item/Item.css
@@ -20,7 +20,7 @@
 .title {
 	margin: 0px;
 	margin-top: 1%;
-	font-size: 1.8vh;
+	font-size: 0.9vw;
 	color: white;
 	padding-left: 1%;
 }
@@ -30,7 +30,7 @@
 	padding-left: 1%;
 	padding-top: 2%;
 	color: #e2e2e2;
-	font-size: 1.4vh;
+	font-size: 0.7vw;
 	font-weight: 300;
 }
 
@@ -46,7 +46,7 @@
 	text-align: center;
 	color: #ffffff;
 	font-weight: 400;
-	font-size: 1.5vh;
+	font-size: 0.8vw;
 	margin-left: 45%;
 }
 
@@ -64,7 +64,7 @@
 .hover-title {
 	margin: 0px;
 	margin-top: 1%;
-	font-size: 1.8vh;
+	font-size: 0.9vw;
 	color: #0068ab;
 	padding-left: 2%;
 }
