--- a/src/Body/Navbar/Navbar.css
+++ b/src/Body/Navbar/Navbar.css
@@ -167,6 +167,7 @@
 		background-color: transparent;
 		position: absolute;
 		top: -30px;
+		left: 6px;
 	}
 
 	.menu {
@@ -189,7 +190,10 @@
 		border-radius: 0px;
 		font-weight: 700;
 		color: #0068ab;
-		font-size: 12px;
+	}
+
+	.text {
+		font-size: 16px;
 	}
 
 	.logo {
