--- a/src/Body/Navbar/Navbar.css
+++ b/src/Body/Navbar/Navbar.css
@@ -2,7 +2,7 @@
 	position: absolute;
 	left: 22%;
 	width: 55%;
-	top: 1%;
+	top: 1.5vw;
 	display: flex;
 }
 
@@ -11,15 +11,15 @@
 .setting,
 .cart {
 	background-color: white;
-	width: 13%;
-	height: 8%;
+	width: 7.6vw;
+	height: 1.3vw;
 	margin-left: 2%;
 	border-radius: 24px;
 	font-weight: 700;
 	color: #0068ab;
-	padding-top: 1%;
-	padding-left: 4%;
-	padding-bottom: 0.6%;
+	padding-top: 0.4vw;
+	padding-left: 1.6vw;
+	padding-bottom: 0.4vw;
 }
 
 .cart {
@@ -28,35 +28,37 @@
 
 .dropdown {
 	background-color: white;
-	margin-left: 6%;
+	margin-left: 0.2vw;
 	border-radius: 24px;
 	font-weight: 700;
 	color: #0068ab;
-	padding-top: 4%;
-	padding-bottom: 3%;
-	padding-left: 8%;
+	padding-top: 0.4vw;
+	padding-left: 1vw;
+	padding-bottom: 0.4vw;
+	height: 1.3vw;
 }
 
 .menu {
-	width: 23%;
+	width: 12vw;
 }
 
 .dropdown > .logo {
-	width: 9%;
-	height: 9%;
-	padding-top: 1%;
+	width: 1vw;
+	height: 1vw;
+	padding-top: 0.3vw;
 }
 
 .logo {
-	width: 18%;
-	height: 8%;
-	margin-right: 8px;
+	width: 1.3vw;
+	height: 1.3vw;
+	margin-right: 1vw;
 	display: inline-block;
 	margin-top: 0px;
+	position: absolute;
 }
 
 #logo-gt {
-	width: 9%;
+	width: 1.3vw;
 }
 
 .text {
@@ -65,16 +67,17 @@
 	display: inline-block;
 	margin-top: 0px;
 	font-size: 0.9vw;
+	margin-left: 1.8vw;
 }
 
 .item_menu > .logo {
-	width: 15%;
-	height: 60%;
+	width: 1.4vw;
+	height: 1.4vw;
 }
 
 .dropdown_menu {
 	display: none;
-	margin-left: 5.7%;
+	margin-left: 0.18vw;
 }
 
 .dropdown:hover,
@@ -125,14 +128,14 @@
 
 .item_menu {
 	background-color: #0068ab;
-	width: 85.7%;
-	height: 6%;
+	width: 10.17vw;
+	height: 1.6vw;
 	font-weight: 500;
 	color: #ffffff;
-	padding-left: 6%;
-	padding-top: 4%;
-	padding-right: 8%;
-	padding-bottom: 2%;
+	padding-top: 0.4vw;
+	padding-left: 1vw;
+	padding-bottom: 0.4vw;
+	padding-right: 0.65vw;
 }
 
 .item_menu:last-child {
