--- a/src/Body/Question/Question.css
+++ b/src/Body/Question/Question.css
@@ -1,17 +1,17 @@
 .question {
 	position: absolute;
-	top: 78%;
+	top: 120vw;
 	text-align: center;
 	width: 100%;
 	color: #ffffff;
 	background-color: #000000;
-	height: 11%;
+	height: 18vw;
 }
 
 .question-title {
 	font-weight: bold;
 	font-size: 1.5vw;
-	margin-top: 4%;
+	margin-top: 4vw;
 }
 
 .question-des {
@@ -21,13 +21,14 @@
 
 .question-dn {
 	font-weight: bold;
+	font-size: 1vw;
 }
 
 .question-dk {
 	background: #0068ab;
 	border-radius: 10px;
-	width: 8%;
-	height: 8%;
+	width: 8vw;
+	height: 1vw;
 	text-align: center;
 	margin-left: 46%;
 	margin-top: 2%;
@@ -36,6 +37,7 @@
 	padding-bottom: 0.8%;
 	height: 5%;
 	cursor: pointer;
+	font-size: 1vw;
 }
 
 @media only screen and (max-width: 420px) {
