--- a/src/Body/Question/Question.css
+++ b/src/Body/Question/Question.css
@@ -76,5 +76,10 @@
 		padding-bottom: 16px;
 		height: 16px;
 		cursor: pointer;
+		font-size: 16px;
+	}
+
+	.question-dn {
+		font-size: 13px;
 	}
 }
