--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -2,7 +2,7 @@
 	background-color: #0068ab;
 	position: fixed;
 	width: 100%;
-	height: 11%;
+	height: 5.5vw;
 	display: flex;
 	align-items: center;
 	z-index: 5;
@@ -10,16 +10,16 @@
 
 .logo_title {
 	position: absolute;
-	width: 50%;
-	height: 50%;
-	left: 2%;
+	width: 20vw;
+	height: 3vw;
+	left: 18vw;
 }
 
 .search {
 	position: absolute;
 	border-radius: 50px;
-	height: 45%;
-	width: 27%;
+	height: 2.4vw;
+	width: 27vw;
 	left: 35%;
 	padding-left: 1%;
 	font-size: 1vw;
@@ -28,19 +28,19 @@
 
 .search_icon {
 	position: absolute;
-	width: 2%;
+	width: 2vw;
 	left: 61%;
-	border-radius: 24px;
+	border-radius: 1vw;
 	background-color: #0068ab;
 	cursor: pointer;
 }
 
 .login {
 	position: absolute;
-	left: 68%;
+	left: 66vw;
 	background-color: white;
 	width: 8%;
-	height: 30%;
+	height: 2vw;
 	border-radius: 24px;
 	padding: 0.4%;
 	padding-left: 0.7%;
@@ -51,7 +51,7 @@
 
 .login_icon {
 	position: absolute;
-	width: 18%;
+	width: 1.6vw;
 }
 
 .login > span {
