--- a/src/Body/Navbar/Navbar.css
+++ b/src/Body/Navbar/Navbar.css
@@ -7,7 +7,6 @@
 }
 
 .intro,
-.support,
 .setting,
 .cart {
 	background-color: white;
@@ -19,6 +18,19 @@
 	color: #0068ab;
 	padding-top: 0.4vw;
 	padding-left: 1.6vw;
+	padding-bottom: 0.4vw;
+}
+
+.support {
+	background-color: white;
+	width: 7vw;
+	height: 1.3vw;
+	margin-left: 2%;
+	border-radius: 24px;
+	font-weight: 700;
+	color: #0068ab;
+	padding-top: 0.4vw;
+	padding-left: 2.4vw;
 	padding-bottom: 0.4vw;
 }
 
