--- a/src/Body/Question/Question.css
+++ b/src/Body/Question/Question.css
@@ -83,3 +83,29 @@
 		font-size: 13px;
 	}
 }
+
+@media only screen and (max-width: 768px) and (min-width: 420px) {
+	.question {
+		top: 197vw;
+		height: 31.8vw;
+	}
+
+	.question-title {
+		margin-top: 6%;
+		font-size: 2.4vw;
+	}
+
+	.question-des {
+		font-size: 1vw;
+	}
+
+	.question-dk {
+		border-radius: 0.8vw;
+		width: 11.5vw;
+		height: 2vw;
+		font-size: 1.5vw;
+		padding-top: 1%;
+		padding-bottom: 1%;
+		margin-left: 44%;
+	}
+}
