--- a/src/Body/Body.css
+++ b/src/Body/Body.css
@@ -17,3 +17,10 @@
 		height: 1560px;
 	}
 }
+
+@media only screen and (max-width: 768px) and (min-width: 420px) {
+	.body {
+		top: 8.5vw;
+		height: 250vw;
+	}
+}
