--- a/src/Body/Navbar/Navbar.css
+++ b/src/Body/Navbar/Navbar.css
@@ -398,3 +398,96 @@
 		width: 50px;
 	}
 }
+
+@media only screen and (max-width: 768px) and (min-width: 420px) {
+	.nav {
+		width: 83.5vw;
+		left: 7vw;
+		top: 3vw;
+	}
+
+	.intro,
+	.setting,
+	.cart {
+		background-color: white;
+		width: 13vw;
+		height: 1.3vw;
+		margin-left: 1%;
+		border-radius: 24px;
+		font-weight: 700;
+		color: #0068ab;
+		/* padding-top: 0.7vw; */
+		padding-left: 3vw;
+		padding-bottom: 1.37vw;
+	}
+
+	.support {
+		background-color: white;
+		width: 12vw;
+		height: 1.3vw;
+		margin-left: 1%;
+		border-radius: 24px;
+		font-weight: 700;
+		color: #0068ab;
+		padding-left: 4vw;
+		padding-bottom: 1.37vw;
+	}
+
+	.dropdown {
+		background-color: white;
+		margin-left: 0.2vw;
+		border-radius: 24px;
+		font-weight: 700;
+		color: #0068ab;
+		padding-left: 0.7vw;
+		padding-bottom: 1.38vw;
+		height: 1.3vw;
+	}
+
+	.menu {
+		width: 19.5vw;
+	}
+
+	.dropdown > .logo {
+		width: 1.4vw;
+		height: 1.4vw;
+		margin-top: 0.3vw;
+		margin-left: 0.5vw;
+	}
+
+	.logo {
+		width: 2.6vw;
+		height: 2.6vw;
+	}
+
+	#logo-gt {
+		width: 2.4vw;
+		height: 2.5vw;
+	}
+
+	.text {
+		position: absolute;
+		height: 13%;
+		display: inline-block;
+		margin-top: 0.3vw;
+		font-size: 1.4vw;
+		margin-left: 3vw;
+	}
+
+	.item_menu {
+		background-color: #0068ab;
+		width: 17vw;
+		height: 1.6vw;
+		font-weight: 500;
+		color: #ffffff;
+		padding-top: 1vw;
+		padding-left: 1vw;
+		padding-bottom: 1vw;
+		padding-right: 0.65vw;
+	}
+
+	.item_menu > .logo {
+		margin-top: 0.5vw;
+		width: 2vw;
+	}
+}
