--- a/src/List/List.css
+++ b/src/List/List.css
@@ -60,3 +60,30 @@
 		margin: 1%;
 	}
 }
+
+@media only screen and (max-width: 768px) and (min-width: 420px) {
+	.list {
+		position: absolute;
+		top: 140vw;
+		left: 7vw;
+	}
+
+	.list_button {
+		position: absolute;
+		top: 137vw;
+		left: 7vw;
+		width: 40vw;
+		height: 5vw;
+	}
+
+	.list_button > button {
+		background: transparent;
+		border-radius: 10px 10px 0px 0px;
+		height: 3vw;
+		margin-left: 1%;
+		border: none;
+		font-size: 1.8vw;
+		color: #ffffff;
+		cursor: pointer;
+	}
+}
