--- a/src/Body/Middle/Middle.css
+++ b/src/Body/Middle/Middle.css
@@ -90,7 +90,7 @@ img + img {
 
 .item-img {
 	width: 13.3vw;
-	height: 12vh;
+	height: 6vw;
 }
 
 .item-km {
@@ -104,14 +104,14 @@ img + img {
 .contain-price {
 	position: absolute;
 	width: 13.3vw;
-	height: 3.3vh;
+	height: 1.7vw;
 	background: #438bb9;
 }
 
 .discount-price {
 	position: absolute;
 	width: 45%;
-	height: 100%;
+	height: 1.7vw;
 	top: 2%;
 	left: 55%;
 
@@ -120,7 +120,7 @@ img + img {
 
 .discount-1 {
 	width: 100%;
-	height: 3.1vh;
+	height: 1.6vw;
 	background-color: #ffffff;
 	margin: 0px;
 	color: #1bdd5d;
@@ -484,7 +484,7 @@ img + img {
 	.contain-price {
 		position: absolute;
 		width: 21vw;
-		height: 3vh;
+		height: 3.3vw;
 		background: #438bb9;
 	}
 
@@ -492,7 +492,6 @@ img + img {
 		position: absolute;
 		width: 45%;
 		height: 100%;
-		top: 2%;
 		left: 55%;
 
 		background: #525252;
